--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@corbado/webcomponent": "^1.0.46",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "@corbado/web-js": "^2.6.0-alpha.0",
+    "prettier": "^3.2.5",
+    "vue": "^3.4.25",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.1",
