--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   },
   "dependencies": {
     "@corbado/web-js": "^2.6.0-alpha.0",
-    "prettier": "^3.2.5",
     "vue": "^3.4.25",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.1",
-    "vite": "^4.4.9"
+    "vite": "^4.4.9",
+    "prettier": "^3.2.5"
   }
 }
